# MoneyPrinterTurbo_Modification

./: .gitignore  README.md  cli.py  config.example.toml  pyproject.toml  webui.bat
app/config/: config.py
app/controllers/v1/: video.py
app/models/: const.py  schema.py
app/services/: material.py  state.py  task.py
docs/: MoneyPrinterTurbo.ipynb  frontend-optimization-progress.md  release-v2.0.0.md  release-v2.0.1.md
scripts/: check_python_runtime.py
test/services/: test_cli.py  test_material.py  test_python_runtime_version.py  test_state.py  test_task.py  test_video.py  test_webui_api_key_manager.py  test_webui_audio_panel.py  test_webui_basic_settings_panel.py  test_webui_generation_panel.py  test_webui_header_panel.py  test_webui_i18n.py  test_webui_main_page.py  test_webui_script_panel.py  test_webui_session_state.py  test_webui_subtitle_panel.py  test_webui_task_history_panel.py  test_webui_task_runner.py  test_webui_task_status_panel.py  test_webui_theme.py  test_webui_utils.py  test_webui_video_panel.py
webui/: Main.py  api_key_manager.py  api_key_panel.py  audio_panel.py  basic_settings_panel.py  generation_panel.py  header_panel.py  main_page.py  script_panel.py  session_state.py  subtitle_panel.py  task_history_panel.py  task_runner.py  task_status_panel.py  theme.py  video_panel.py  webui_utils.py
webui/i18n/: de.json  en.json  es.json  pt.json  ru.json  tr.json  vi.json  zh.json
