# 璇存槑锛?
# 1. 涓讳緷璧栨潵婧愮粺涓€鏀舵暃鍒?pyproject.toml銆?
# 2. 杩愯鐜閫氳繃 uv.lock 鍥哄畾锛岄伩鍏嶄笉鍚屾満鍣ㄨВ鏋愬嚭涓嶅悓鐗堟湰缁勫悎銆?
[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "moneyprinterturbo"
version = "2.0.1"
description = "Generate short videos from prompts, local assets, subtitles, and TTS."
readme = "README-en.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
dependencies = [
    "moviepy==2.2.1",
    "streamlit==1.58.0",
    "edge-tts==7.2.7",
    "fastapi==0.136.3",
    "uvicorn==0.32.1",
    "openai==2.24.0",
    "faster-whisper==1.1.0",
    "loguru==0.7.3",
    "google-generativeai==0.8.6",
    "dashscope==1.20.14",
    "azure-cognitiveservices-speech==1.41.1",
    "redis==5.2.0",
    "python-multipart==0.0.27",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "socksio==1.0.0",
    "pydub==0.25.1",
    "litellm==1.86.2",
]

[project.optional-dependencies]
g4f = [
    "g4f==0.5.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# 褰撳墠椤圭洰浠ュ簲鐢ㄨ繍琛屽舰鎬佷负涓伙紝涓嶄綔涓哄彲鍙戝竷鐨?Python 鍖呭畨瑁呫€?
package = false
